raw/RAMADIAN DAFFI 6412 245150200111040/2024-11-14-09-38-23.ceg/compilation.txt
NT.java:40: error: illegal start of expression
        hasil =/ 2;
               ^
1 error
Not compiled
